data_model/derive/tests/ui_fail/transparent_api_private_item.stderr
error[E0603]: struct `Payload` is private
 --> tests/ui_fail/transparent_api_private_item.rs:1:36
  |
1 | use iroha_data_model::query::http::Payload;
  |                                    ^^^^^^^ private struct
  |
note: the struct `Payload` is defined here
 --> $WORKSPACE/data_model/src/query.rs
  |
  |         pub(crate) struct Payload {
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^
